--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -1,21 +1,24 @@
 [main]
 input_folder = path\\to\\input
 output_folder = path\\to\\output
-# Output format for processed images (e.g., png, jpg)
+# Output format for processed images (e.g., png, jpg) 
+#!! If you save in a lossy format here, your images will be compressed again on top of the compression settings below !!
 output_format = png
 # List of degradations to apply to images in specified order (e.g., blur,noise,compression,scale)
-degradations = compression,noise,blur,scale
+degradations = blur,noise,compression,scale
 # Whether to randomize the order of degradations (True or False)
 randomize = True
 
+
 # Blur settings
 [blur]
-# List of available blur algorithms (e.g., average,gaussian,isotropic,anisotropic,sinc)
-algorithms = average,gaussian,isotropic,anisotropic,sinc
+# List of available blur algorithms (e.g., average,gaussian,isotropic,anisotropic)
+algorithms = average,gaussian,isotropic,anisotropic
 # Whether to choose a random blur algorithm each time (True or False)
 randomize = True
 # Range of values for blur kernel size or standard deviation (e.g., 1,10)
 range = 1,5
+
 
 # Noise settings
 [noise]
@@ -25,6 +28,7 @@ algorithms = uniform,gaussian,color,gray
 randomize = True
 # Range of values for noise intensity (e.g., 0,50) !!Do not go below 0!!
 range = 1,3
+
 
 # Compression settings
 [compression]
@@ -37,7 +41,12 @@ jpeg_quality_range = 0, 100
 # WebP Quality levels
 webp_quality_range = 1, 100
 # Video quality in CRF format
-crf_level = 23
+crf_level = 32
+# Bitrate control for MPEG codec
+mpegbitrate = 4500k
+# Bitrate control for MPEG-2 codec
+mpeg2bitrate = 4000k
+
 
 # Scale settings
 [scale]
