random down_up algos, crf ranges, print text

--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -8,6 +8,8 @@ output_format = png
 degradations = blur,noise,compression,scale
 # Whether to randomize the order of degradations (True or False)
 randomize = True
+# Whether to print the degradations applied onto the image. Useful for testing.
+print = False
 
 
 # Blur settings
@@ -40,8 +42,10 @@ randomize = True
 jpeg_quality_range = 0, 100
 # WebP Quality levels
 webp_quality_range = 1, 100
-# Video quality in CRF format
-crf_level = 32
+# H.264 video quality levels in CRF format
+h264_crf_level_range = 20,28
+# HEVC video quality levels in CRF format
+hevc_crf_level_range = 25,33
 # Bitrate control for MPEG codec
 mpegbitrate = 4500k
 # Bitrate control for MPEG-2 codec
@@ -52,6 +56,8 @@ mpeg2bitrate = 4000k
 [scale]
 # List of available scale algorithms (e.g., down_up,bicubic,bilinear,box,nearest,lanczos)
 algorithms = down_up,bicubic,bilinear,box,nearest,lanczos
+# List of available scale algorithms when applying down_up
+down_up_algorithms = bicubic,bilinear,box,lanczos,nearest
 # Whether to choose a random scale algorithm each time (True or False)
 randomize = True
 # Factor to scale your images to (e.g., 0.25, 0.50, 0.75) (0.25 = 25%, 0.50 = 50%)
