--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -19,8 +19,9 @@ algorithms = average,gaussian,isotropic,anisotropic
 # Whether to choose a random blur algorithm each time (True or False)
 randomize = True
 # Range of values for blur kernel size or standard deviation (e.g., 1,10)
-range = 1,5
-
+range = 1,16
+#Adjusts the scaling of the blur range. For average and gaussian, this will add 1 when the new value is even
+scale_factor = 0.25
 
 # Noise settings
 [noise]
@@ -29,7 +30,9 @@ algorithms = uniform,gaussian,color,gray
 # Whether to choose a random noise algorithm each time (True or False)
 randomize = True
 # Range of values for noise intensity (e.g., 0,50) !!Do not go below 0!!
-range = 1,3
+range = 1,16
+#Adjusts the scaling of the noise range
+scale_factor = 0.25
 
 
 # Compression settings
