Add option to generate applied_degradations.txt - currently only tested on ubuntu

--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -10,7 +10,10 @@ degradations = blur,noise,compression,scale
 randomize = True
 # Whether to print the degradations applied onto the image. Useful for testing.
 print = False
-
+# Wheter to print the degradations applied into a separate text file. Useful for dataset statistics.
+textfile = False
+# The path where the applied_degradations.txt text file will be generated (or appended to if exists), use if textfile = True
+textfile_path = path/to/output
 
 # Blur settings
 [blur]
