--- a/Dataset Destroyer/requirements.txt
+++ b/Dataset Destroyer/requirements.txt
@@ -1,5 +1,6 @@
-opencv_python==4.7.0.72
-numpy==1.24.2
-ffmpeg_python==0.2.0
-tqdm==4.64.1
-scipy
+opencv-python
+numpy
+ffmpeg-python
+pillow
+tqdm
+chainner_ext
