--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -37,6 +37,15 @@ range = 1,16
 #Adjusts the scaling of the noise range
 scale_factor = 0.25
 
+# Configuration for quantization degradation
+[quantization]
+# List of available quantization algorithms (e.g., floyd_steinberg, jarvis_judice_ninke, stucki, atkinson, burkes, sierra, two_row_sierra, sierra_lite)
+algorithms = floyd_steinberg,jarvis_judice_ninke,stucki,atkinson,burkes,sierra,two_row_sierra,sierra_lite
+# Whether to choose a random quantization algorithm each time (True or False)
+randomize = True
+# Range of values for quantization levels (e.g., 2, 255)
+range = 2, 255
+
 # Compression settings
 [compression]
 # List of available compression algorithms (e.g., mpeg,mpeg2,h264,hevc,jpeg,webp)
