--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -4,8 +4,8 @@ output_folder = path\\to\\output
 # Output format for processed images (e.g., png, jpg) 
 #!! If you save in a lossy format here, your images will be compressed again on top of the compression settings below !!
 output_format = png
-# List of degradations to apply to images in specified order (e.g., blur,noise,compression,scale)
-degradations = blur,noise,compression,scale
+# List of degradations to apply to images in specified order (e.g., blur,noise,compression,scale,quantization)
+degradations = blur,noise,compression,scale,quantization
 # Whether to randomize the order of degradations (True or False)
 randomize = True
 # Whether to print the degradations applied onto the image. Useful for testing.
@@ -13,7 +13,7 @@ print = False
 # Wheter to print the degradations applied into a separate text file. Useful for dataset statistics.
 textfile = False
 # The path where the applied_degradations.txt text file will be generated (or appended to if exists), use if textfile = True
-textfile_path = path/to/output
+textfile_path = path\\to\\output
 
 # Blur settings
 [blur]
@@ -60,10 +60,12 @@ webp_quality_range = 1, 100
 h264_crf_level_range = 20,28
 # HEVC video quality levels in CRF format
 hevc_crf_level_range = 25,33
-# Bitrate control for MPEG codec
-mpegbitrate = 4500k
-# Bitrate control for MPEG-2 codec
-mpeg2bitrate = 4000k
+# VP9 video quality levels in CRF format
+vp9_crf_level_range = 27,35
+# Bitrate control in kbps for MPEG codec
+mpeg_bitrate_range = 3000,5000
+# Bitrate control in kbps for MPEG-2 codec
+mpeg2_bitrate_range = 3000,5000
 
 
 # Scale settings
