--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -28,14 +28,18 @@ scale_factor = 0.25
 
 # Noise settings
 [noise]
-# List of available noise algorithms (e.g., uniform,gaussian,color,gray)
-algorithms = uniform,gaussian,color,gray
+# List of available noise algorithms (e.g., uniform,gaussian,color,gray,iso,salt-and-pepper)
+algorithms = uniform,gaussian,color,gray,iso,salt-and-pepper
 # Whether to choose a random noise algorithm each time (True or False)
 randomize = True
 # Range of values for noise intensity (e.g., 0,50) !!Do not go below 0!!
 range = 1,16
-#Adjusts the scaling of the noise range
+# Adjusts the scaling of the noise range
 scale_factor = 0.25
+# Range of values for salt and pepper noise intensity (e.g., 0,50) !!Do not go below 0!!
+sp_range = 1,5
+# Adjusts the scaling of the salt and pepper noise range
+sp_scale_factor = 0.02
 
 # Configuration for quantization degradation
 [quantization]
@@ -48,24 +52,25 @@ range = 2, 255
 
 # Compression settings
 [compression]
-# List of available compression algorithms (e.g., mpeg,mpeg2,h264,hevc,jpeg,webp)
-algorithms = mpeg,mpeg2,h264,hevc,jpeg,webp
+# List of available compression algorithms (e.g., mpeg,mpeg2,h264,hevc,jpeg,webp,vp9) 
+# Using more intensive codecs (such as vp9) in combination with other degradations may result in ffmpeg errors
+algorithms = mpeg,mpeg2,h264,hevc,jpeg,webp,vp9
 # Whether to choose a random algorithm from the list
 randomize = True
 # JPEG Quality Levels
-jpeg_quality_range = 0, 100
+jpeg_quality_range = 25, 100
 # WebP Quality levels
-webp_quality_range = 1, 100
+webp_quality_range = 25, 100
 # H.264 video quality levels in CRF format
 h264_crf_level_range = 20,28
 # HEVC video quality levels in CRF format
 hevc_crf_level_range = 25,33
 # VP9 video quality levels in CRF format
-vp9_crf_level_range = 27,35
+vp9_crf_level_range = 25,35
 # Bitrate control in kbps for MPEG codec
 mpeg_bitrate_range = 3000,5000
 # Bitrate control in kbps for MPEG-2 codec
-mpeg2_bitrate_range = 3000,5000
+mpeg2_bitrate_range = 2000,4000
 
 
 # Scale settings
