--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -4,8 +4,8 @@ output_folder = path\\to\\output
 # Output format for processed images (e.g., png, jpg) 
 #!! If you save in a lossy format here, your images will be compressed again on top of the compression settings below !!
 output_format = png
-# List of degradations to apply to images in specified order (e.g., blur,noise,compression,scale,quantization)
-degradations = blur,noise,compression,scale,quantization
+# List of degradations to apply to images in specified order (e.g., blur,noise,compression,scale,quantization,unsharp_mask)
+degradations = blur,noise,compression,scale
 # Whether to randomize the order of degradations (True or False)
 randomize = True
 # Whether to print the degradations applied onto the image. Useful for testing.
@@ -85,3 +85,12 @@ randomize = True
 size_factor = 0.25
 # Range of values for down_up (e.g., 0.5,2.0) (0.5 = 50%, 2.0 = 200%)
 range = 0.5,2.0
+
+# Unsharp mask settings
+[unsharp_mask]
+# radius_range: Range for the Gaussian blur radius in pixels. Larger values result in less detail.
+radius_range = 0.2, 0.5
+# percent_range: Range for the amount of sharpening. Higher values result in more sharpening.
+percent_range = 3, 15
+# threshold_range: Range for the contrast threshold. Only details with contrast above this are enhanced.
+threshold_range = 1, 3
