--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -75,10 +75,10 @@ mpeg2_bitrate_range = 2000,4000
 
 # Scale settings
 [scale]
-# List of available scale algorithms (e.g., down_up,bicubic,bilinear,box,nearest,lanczos)
-algorithms = down_up,bicubic,bilinear,box,nearest,lanczos
+# List of available scale algorithms (e.g., down_up,nearest,linear,cubic_catrom,cubic_mitchell,cubic_bspline,lanczos,gauss,box)
+algorithms = down_up,nearest,linear,cubic_catrom,cubic_mitchell,cubic_bspline,lanczos,gauss,box
 # List of available scale algorithms when applying down_up
-down_up_algorithms = bicubic,bilinear,box,lanczos,nearest
+down_up_algorithms = nearest,linear,cubic_catrom,cubic_mitchell,cubic_bspline,lanczos,gauss,box
 # Whether to choose a random scale algorithm each time (True or False)
 randomize = True
 # Factor to scale your images to (e.g., 0.25, 0.50, 0.75) (0.25 = 25%, 0.50 = 50%)
