--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -17,8 +17,8 @@ textfile_path = path\\to\\output
 
 # Blur settings
 [blur]
-# List of available blur algorithms (e.g., average,gaussian,isotropic,anisotropic)
-algorithms = average,gaussian,isotropic,anisotropic
+# List of available blur algorithms (e.g., average,gaussian,anisotropic)
+algorithms = average,gaussian,anisotropic
 # Whether to choose a random blur algorithm each time (True or False)
 randomize = True
 # Range of values for blur kernel size or standard deviation (e.g., 1,10)
