--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -28,8 +28,8 @@ scale_factor = 0.25
 
 # Noise settings
 [noise]
-# List of available noise algorithms (e.g., uniform,gaussian,color,gray,simu_iso,salt-and-pepper)
-algorithms = uniform,gaussian,color,gray,simu_iso,salt-and-pepper
+# List of available noise algorithms (e.g., uniform,gaussian,color,gray,salt-and-pepper)
+algorithms = uniform,gaussian,color,gray,salt-and-pepper
 # Whether to choose a random noise algorithm each time (True or False)
 randomize = True
 # Range of values for noise intensity (e.g., 0,50) !!Do not go below 0!!
