--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -67,11 +67,10 @@ h264_crf_level_range = 23,32
 hevc_crf_level_range = 25,34
 # VP9 video quality levels in CRF format
 vp9_crf_level_range = 25,35
-# Bitrate control in kbps for MPEG codec
-mpeg_bitrate_range = 3000,5000
-# Bitrate control in kbps for MPEG-2 codec
-mpeg2_bitrate_range = 2000,4000
-
+# Quality control for MPEG codec. Range 1-31
+mpeg_qscale_range = 2,15
+# Quality  control for MPEG2 codec. Range 1-31
+mpeg2_qscale_range = 2,15
 
 # Scale settings
 [scale]
