--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -74,16 +74,16 @@ mpeg2_qscale_range = 2,15
 
 # Scale settings
 [scale]
-# List of available scale algorithms (e.g., down_up,nearest,linear,cubic_catrom,cubic_mitchell,cubic_bspline,lanczos,gauss)
-algorithms = down_up,nearest,linear,cubic_catrom,cubic_mitchell,cubic_bspline,lanczos,gauss
+# List of available scale algorithms (e.g., down_up,linear,cubic_catrom,cubic_mitchell,cubic_bspline,lanczos,gauss,hamming,hann,box,hermite,lagrange)
+algorithms = down_up,linear,cubic_mitchell,lanczos,gauss,box
 # List of available scale algorithms when applying down_up
-down_up_algorithms = nearest,linear,cubic_catrom,cubic_mitchell,cubic_bspline,lanczos,gauss
+down_up_algorithms = linear,cubic_mitchell,lanczos,gauss,box
 # Whether to choose a random scale algorithm each time (True or False)
 randomize = True
 # Factor to scale your images to (e.g., 0.25, 0.50, 0.75) (0.25 = 25%, 0.50 = 50%)
 size_factor = 0.25
 # Range of values for down_up (e.g., 0.5,2.0) (0.5 = 50%, 2.0 = 200%)
-range = 0.5,2.0
+range = 0.75,1.5
 
 # Unsharp mask settings
 [unsharp_mask]
