--- a/Dataset Destroyer/config.ini
+++ b/Dataset Destroyer/config.ini
@@ -15,6 +15,15 @@ textfile = False
 # The path where the applied_degradations.txt text file will be generated (or appended to if exists), use if textfile = True
 textfile_path = path\\to\\output
 
+# Controls likelihood of a degradation being applied. 0-1
+[likelihood]
+blur = 0.4
+noise = 0.4
+compression = 0.1
+scale = 0.05
+quantization = 0.05
+unsharp_mask = 0.05
+
 # Blur settings
 [blur]
 # List of available blur algorithms (e.g., average,gaussian,anisotropic)
