--- a/Upscale Script/config.ini
+++ b/Upscale Script/config.ini
@@ -1,5 +1,9 @@
 [Processing]
+; TileSize = native,512,384,etc.
 TileSize = native
+; Precision = auto,bf16,fp16,fp32
 Precision = auto
-ThreadPoolWorkers = 16
+; ThreadPoolWorkers = number of threads for processing
+ThreadPoolWorkers = 4
+; OutputFormat = png,jpeg,tga,etc.
 OutputFormat = png
