--- a/Upscale Script/config.ini
+++ b/Upscale Script/config.ini
@@ -7,3 +7,7 @@ Precision = auto
 ThreadPoolWorkers = 4
 ; OutputFormat = png,jpeg,tga,etc.
 OutputFormat = png
+; AlphaHandling = resize,upscale,discard
+AlphaHandling = resize
+; GammaCorrection = true, false | Selects whether or not to apply gamma correction while AlphaHandling = resize
+GammaCorrection = False
